tests-integration/tests/snapshots/checking__data_mutual.snap
---
source: tests-integration/tests/checking.rs
expression: snapshot
---
Terms
Tree :: forall (a :: Type). (a -> (Forest a) -> (Tree a))
Nil :: forall (a :: Type). (Forest a)
Cons :: forall (a :: Type). ((Tree a) -> (Forest a) -> (Forest a))

Types
Tree :: (Type -> Type)
Forest :: (Type -> Type)
