tests-integration/tests/snapshots/checking__data_recursive.snap
---
source: tests-integration/tests/checking.rs
expression: snapshot
---
Terms
Nil :: forall (a :: Type). List a
Cons :: forall (a :: Type). a -> List a -> List a

Types
List :: Type -> Type
