tests-integration/tests/snapshots/checking__expand_simple_synonym.snap
---
source: tests-integration/tests/checking.rs
expression: snapshot
---
Terms

Types
Simple :: Type
Test :: Type

Synonyms
Simple = Int
  Quantified = :0
  Kind = :0
  Type = :0

Test = Int
  Quantified = :0
  Kind = :0
  Type = :0
