tests-integration/tests/snapshots/checking__fresh_unification_normalized.snap
---
source: tests-integration/tests/checking.rs
expression: snapshot
---
?1[true, true] ~> ?1[&0, &1] :: (Int -> (Int -> ?0[true, true]))
