tests-integration/tests/snapshots/checking__invalid_type_operator_nullary.snap
---
source: tests-integration/tests/checking.rs
expression: checked.errors
---
[
    CheckError {
        kind: InvalidTypeOperator {
            id: Id<checking::core::Type>(1),
        },
        step: [
            TypeDeclaration(
                Idx::<TypeItem>(1),
            ),
        ],
    },
]
