tests-integration/tests/snapshots/checking__invalid_type_operator_unary.snap
---
source: tests-integration/tests/checking.rs
expression: checked.errors
---
[
    CheckError {
        kind: InvalidTypeOperator {
            id: Id<checking::core::Type>(23),
        },
        step: [
            TypeDeclaration(
                Idx::<TypeItem>(1),
            ),
        ],
    },
]
