tests-integration/tests/snapshots/checking__newtype_recursive.snap
---
source: tests-integration/tests/checking.rs
expression: snapshot
---
Terms
In :: forall (f :: (Type -> Type)). ((*0 (Mu *0)) -> (Mu *0))

Types
Mu :: ((Type -> Type) -> Type)
